<resources>
    <string name="app_name">SoftUniDemo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="tweet">Tweet</string>
    <string name="tweet_photo">Tweet Photo</string>
    <string name="crash">Crash</string>
    <string name="logout">Logout</string>
</resources>
